Initial port to forge 1.18.2